[package]
name = "guayusa-wl"
version = "0.1.0"
description = "A D-Bus controllable idle inhibitor for Wayland"
authors = ["Steffen Ridderbusch <steffen@robots.ox.ac.uk>"]
edition = "2024"
license = "MIT"

[dependencies]
wayland-client = "0.31"
wayland-protocols = { version = "0.32", features = ["unstable", "client"] }
zbus = { version = "5.7", default-features = false, features = ["tokio"] }
tokio = { version = "1.0", default-features = false, features = [
    "rt-multi-thread",
    "macros",
    "signal",
    "io-util",
    "fs",
] }
anyhow = "1.0"
# Use a lighter logging implementation
log = "0.4"
env_logger = { version = "0.11", default-features = false }
# High-performance synchronization primitives
parking_lot = "0.12"

# Release profile optimizations for binary size
[profile.release]
lto = "fat"
opt-level = "z"
strip = true
codegen-units = 1
overflow-checks = false

[build-dependencies]
wayland-scanner = "0.31"

[package.metadata.generate-rpm]
assets = [
    { source = "target/x86_64-unknown-linux-gnu/release/guayusa-wl", dest = "/usr/bin/guayusa", mode = "755" }, # Adjust 'source' if your binary path/name is different
    { source = "systemd/guayusa.service", dest = "/usr/lib/systemd/user/guayusa.service", mode = "644" },
]

pre_uninstall_script = """
%systemd_user_preun guayusa.service
"""
post_install_script = """
%systemd_user_post guayusa.service
"""
post_uninstall_script = """
%systemd_user_postun guayusa.service
"""

[package.metadata.generate-rpm.requires]
libc = "*"
systemd = "*"
